# winpath.rs

./: .gitignore  Cargo.toml  appveyor.yml
openat/: Cargo.toml
openat/src/: lib.rs
openat/src/windows/: ffi.c  ffi.rs  open.rs
src/: dotdot.rs  lib.rs
winpath/: Cargo.toml  README.md
winpath/src/: lib.rs
