[package]
name = "winpath"
version = "0.0.1"
authors = ["Demi Obenour <demiobenour@gmail.com>"]
description = """
Windows path canonicalization library in Rust.
"""

license = "MIT/Apache-2.0"

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processenv"] }
