[package]
name = "winpath"
version = "0.1.1"
authors = ["Demi Obenour <demiobenour@gmail.com>"]
edition = "2018"
description = """
Windows path canonicalization library in Rust.
"""
repository = 'https://github.com/DemiMarie/winpath.rs'

license = "MIT/Apache-2.0"

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processenv"] }
